###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_cuda", version = "0.2.5")
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "pip_deps",
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//:tools/build/bazel/requirements.txt",
)

use_repo(pip, "pypi")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
