module(name = "pytorch")

# Build rules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_cuda", version = "0.3.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Protobuf (local submodule)
bazel_dep(name = "protobuf", version = "33.5", repo_name = "com_google_protobuf")
local_path_override(
    module_name = "protobuf",
    path = "third_party/protobuf",
)

# Testing and benchmarks (local submodules)
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
local_path_override(
    module_name = "googletest",
    path = "third_party/googletest",
)

bazel_dep(name = "google_benchmark", version = "1.9.3", repo_name = "com_google_benchmark")
local_path_override(
    module_name = "google_benchmark",
    path = "third_party/benchmark",
)

# Flatbuffers (from BCR, submodule MODULE.bazel is empty)
bazel_dep(name = "flatbuffers", version = "25.2.10", repo_name = "com_github_google_flatbuffers")

# glog/gflags (from BCR)
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_github_glog")
bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")

# cpuinfo (local submodule, referenced by fbgemm/pthreadpool/XNNPACK as @cpuinfo)
bazel_dep(name = "cpuinfo", version = "0.0.0")
local_path_override(
    module_name = "cpuinfo",
    path = "third_party/cpuinfo",
)

# nlohmann JSON (local submodule with its own Bazel build)
bazel_dep(name = "nlohmann_json", version = "0.0.0", repo_name = "nlohmann")
local_path_override(
    module_name = "nlohmann_json",
    path = "third_party/nlohmann",
)

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.10",
    requirements_lock = "//:tools/build/bazel/requirements.txt",
)
use_repo(pip, "pypi")

# pybind11
pybind11_configure = use_extension("@pybind11_bazel//:internal_configure.bzl", "internal_configure_extension")
use_repo(pybind11_configure, "pybind11")

# PyTorch local third-party deps and CUDA/cuDNN
pytorch = use_extension("//tools/rules:extensions.bzl", "pytorch_local_repos")
use_repo(
    pytorch,
    "gloo",
    "onnx",
    "cutlass",
    "fbgemm",
    "ideep",
    "mkl_dnn",
    "asmjit",
    "sleef",
    "fmt",
    "kineto",
    "cpp-httplib",
    "moodycamel",
    "tensorpipe",
    "cudnn_frontend",
    "pthreadpool",
    "FXdiv",
    "XNNPACK",
    "gemmlowp",
    "kleidiai",
    "cuda",
    "cudnn",
    "mkl",
    "mkl_headers",
    "unused_tensorpipe_googletest",
    "unused_fbgemm",
    "unused_ftm_bazel",
    "unused_kineto_fmt_bazel",
    "unused_kineto_dynolog_googletest",
    "unused_kineto_dynolog_gflags",
    "unused_kineto_dynolog_glog",
    "unused_kineto_googletest",
    "unused_onnx_benchmark",
)
